hphp/hack/test/typecheck/type_structure/type_structure4.php.exp
File "type_structure4.php", line 4, characters 18-33:
Unbound name: NonExistentClass (an object type) (Naming[2049])
