hphp/hack/test/typecheck/type_structure/type_structure4.php
<?hh // strict

function test(): void {
  type_structure(NonExistentClass::class, 'T');
}
